Fix spacing of search results in mobile devices

--- a/wp-content/themes/after-dark/src/sass/_search-bar.scss
+++ b/wp-content/themes/after-dark/src/sass/_search-bar.scss
@@ -1,13 +1,13 @@
 // Define all search bar related styles here
 
-.search-bar {
+#search-bar {
   background-color: $color-secondary;
   padding: $space-horizontal $space-horizontal;
   margin-top: $navigation-height + 2 * $space-horizontal;
 
   > .wrapper {
-    margin-left: 0;
     margin-right: 0;
+    margin-left: 0;
 
     @include respond-above(lg) {
       margin-right: auto;
@@ -28,5 +28,13 @@
 
   @include respond-above(lg) {
     display: none;
+  }
+
+  ~ .wrapper {
+    margin-top: 0;
+
+    @include respond-above(lg) {
+      margin-top: 48px;
+    }
   }
 }
